--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
 /*=================중단점=================*/
 $break-mobile: '320px';
-$break-450: '450px'; // 띄어쓰기 제거 전용
+$break-450: '450px';
 $break-tablet: '768px';
 $break-semipc: '1200px'; 
 $break-hugepc: '1600px';
@@ -85,12 +85,8 @@ $large_margin_t: 200px;
 $large_margin_s: 250px;
 $large_margin_h: 300px;
 
-$large_margin_p: 150px;
-$large_margin_t: 200px;
-$large_margin_s: 250px;
-$large_margin_h: 300px;
 
 $grand_magin_p: 200px;
 $grand_magin_t: 250px;
 $grand_magin_s: 300px;
-$grand_magin_s: 350px;
+$grand_magin_h: 350px;
