--- a/css/animation.css
+++ b/css/animation.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
+/*=================톤앤매너(스킬)=================*/
+/*=================svg 필터=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
 @keyframes header_logo {
