--- a/css/reset.css
+++ b/css/reset.css
@@ -1,18 +1,26 @@
 @charset "UTF-8";
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
+/*=================톤앤매너(스킬)=================*/
+/*=================svg 필터=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
+/*=================톤앤매너(스킬)=================*/
+/*=================svg 필터=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
+/*=================톤앤매너(스킬)=================*/
+/*=================svg 필터=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
+/*=================톤앤매너(스킬)=================*/
+/*=================svg 필터=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
 * {
