--- a/scss/reset.scss
+++ b/scss/reset.scss
@@ -17,6 +17,7 @@ html, body {
 body {
   background-color: $background;
   color: white;
+  height: 100%;
 
   &::after {
     // position: absolute;
